# claw-mem

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  INSTALL.md  MANIFEST.in  README.md  enhanced_memory_manager.py  fix_syntax.py  install.sh  main.py  model_router_skill.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
capture/: __init__.py  session_capture.py
config/: config.yaml
core/: __init__.py  memory_manager.py  memory_manager_complete.py
memory/: MEMORY.md  SESSION.md
search/: __init__.py  vector_search.py
tests/: __init__.py  test_memory_manager.py
utils/: __init__.py  helpers.py
